@@ -95,7 +95,7 @@ class LogUploader(Thread, Component):
                 filename = join(basedir, "history", f)
                 self.upload(filename)
                 print >> upload_log, f
-                self.log().uploaded(filename)
+                self.log().uploaded_log(filename)
                 print _("done!")           
         except:
             self.log().upload_failed()
