@@ -27,19 +27,19 @@ class SqlLogger(Logger):
     UPDATED_CARD = 12
     DELETED_CARD = 13
     REPETITION = 14
-    UPLOADED = 15
+    UPLOADED_LOG = 15
     UPLOAD_FAILED = 16
     STOPPED_PROGRAM = 17
                             
     def started_program(self):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
             (self.STARTED_PROGRAM, int(time.time()), "Mnemosyne %s %s %s" % \
              (mnemosyne.version.version, os.name, sys.platform)))
 
     def started_scheduler(self):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
             (self.STARTED_SCHEDULER, int(time.time()), self.scheduler().name))
     
     def loaded_database(self):
@@ -60,69 +60,67 @@ class SqlLogger(Logger):
         
     def added_fact(self, fact):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.ADDED_FACT, int(time.time()), fact._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.ADDED_FACT, int(time.time()), fact.id))
         
     def updated_fact(self, fact):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.UPDATED_FACT, int(time.time()), fact._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.UPDATED_FACT, int(time.time()), fact.id))
         
     def deleted_fact(self, fact):
-        # For deleted objects, we store the id as opposed to the _id, as there
-        # is no way to retrieve it afterwards.
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
             (self.DELETED_FACT, int(time.time()), fact.id))
         
     def added_tag(self, tag):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.ADDED_TAG, int(time.time()), tag._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.ADDED_TAG, int(time.time()), tag.id))
         
     def updated_tag(self, tag):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.UPDATED_TAG, int(time.time()), tag._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.UPDATED_TAG, int(time.time()), tag.id))
         
     def deleted_tag(self, tag):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
             (self.DELETED_TAG, int(time.time()), tag.id))
         
     def added_card(self, card):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.ADDED_CARD, int(time.time()), card._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.ADDED_CARD, int(time.time()), card.id))
         
     def updated_card(self, card):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.UPDATED_CARD, int(time.time()), card._id))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.UPDATED_CARD, int(time.time()), card.id))
         
     def deleted_card(self, card):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
             (self.DELETED_CARD, int(time.time()), card.id))
         
     def repetition(self, card, scheduled_interval, actual_interval, \
                    new_interval, noise=0):
         self.database().con.execute(\
-            """insert into history(event, timestamp, _object_id, grade,
+            """insert into history(event, timestamp, object_id, grade,
             easiness, acq_reps, ret_reps, lapses, acq_reps_since_lapse,
             ret_reps_since_lapse, scheduled_interval, actual_interval,
             new_interval, thinking_time)
             values(?,?,?,?,?,?,?,?,?,?,?,?,?,?)""",
-            (self.REPETITION, int(time.time()), card._id, card.grade,
+            (self.REPETITION, int(time.time()), card.id, card.grade,
             card.easiness, card.acq_reps, card.ret_reps, card.lapses,
             card.acq_reps_since_lapse, card.ret_reps_since_lapse,
             scheduled_interval, actual_interval, new_interval,
             int(stopwatch.time())))
 
-    def uploaded(self, filename):
+    def uploaded_log(self, filename):
         self.database().con.execute(\
-            "insert into history(event, timestamp, _object_id) values(?,?,?)",
-            (self.UPLOADED, int(time.time()), filename))
+            "insert into history(event, timestamp, object_id) values(?,?,?)",
+            (self.UPLOADED_LOG, int(time.time()), filename))
         
     def upload_failed(self):
         self.database().con.execute(\
@@ -141,20 +139,21 @@ class SqlLogger(Logger):
         sql_res = self.database().con.execute(\
             "select _last_history_id from partnerships where partner=?",
             ("log.txt", )).fetchone()
-        index = int(sql_res["_last_history_id"])
+        last_index = int(sql_res["_last_history_id"])
+        index = 0
         # Loop over history entries and dump them to text file.
-        # Make sure to convert _id's to id's when needed.
         for cursor in self.database().con.execute(\
-            "select * from history where _id>?", (index, )):
+            "select * from history where _id>?", (last_index, )):
+            index = int(cursor["_id"])
             event = cursor["event"]
             timestamp = time.strftime("%Y-%m-%d %H:%M:%S",
                 time.localtime(cursor["timestamp"]))
             if event == self.STARTED_PROGRAM:
                 print >> logfile, "%s : Program started : %s" \
-                      % (timestamp, cursor["_object_id"])
+                      % (timestamp, cursor["object_id"])
             elif event == self.STARTED_SCHEDULER:
                 print >> logfile, "%s : Scheduler : %s" \
-                      % (timestamp, cursor["_object_id"])
+                      % (timestamp, cursor["object_id"])
             elif event == self.LOADED_DATABASE:
                 print >> logfile, "%s : Loaded database %d %d %d" \
                       % (timestamp, cursor["acq_reps"], cursor["ret_reps"],
@@ -164,19 +163,32 @@ class SqlLogger(Logger):
                       % (timestamp, cursor["acq_reps"], cursor["ret_reps"],
                          cursor["lapses"])
             elif event == self.ADDED_CARD:
-                sql_res = self.database().con.execute(\
-                    "select id from cards where _id=?",
-                    (cursor["_object_id"], )).fetchone()
                 # Use dummy grade and interval, We log the first repetition
                 # separately anyhow.
                 print >> logfile, "%s : New item %s -1 -1" \
-                      % (timestamp, sql_res["id"])
+                      % (timestamp, cursor["object_id"])
             elif event == self.DELETED_CARD:
                 print >> logfile, "%s : Deleted item %s" \
-                      % (timestamp, cursor["_object_id"])
-
-
+                      % (timestamp, cursor["object_id"])
+            elif event == self.REPETITION:
+                print >> logfile, \
+              "%s : R %s %d %1.2f | %d %d %d %d %d | %d %d | %d %d | %1.1f" %\
+                         (timestamp, cursor["object_id"], cursor["grade"],
+                          cursor["easiness"], cursor["acq_reps"],
+                          cursor["ret_reps"], cursor["lapses"],
+                          cursor["acq_reps_since_lapse"],
+                          cursor["ret_reps_since_lapse"],
+                          cursor["scheduled_interval"],
+                          cursor["actual_interval"], cursor["new_interval"],
+                          0, cursor["thinking_time"])
+            elif event == self.UPLOADED_LOG:
+                print >> logfile, "%s : Uploaded %s" %\
+                      (timestamp, cursor["object_id"])
+            elif event == self.UPLOAD_FAILED:
+                print >> logfile, "%s : Upload failed" % (timestamp, )
             elif event == self.STOPPED_PROGRAM:
-                print >> logfile, "%s : Program stopped" % (timestamp, )
-                
+                print >> logfile, "%s : Program stopped" % (timestamp, )               
         # Update partnership index.
+        self.database().con.execute(\
+            "update partnerships set _last_history_id=? where partner=?",
+            (index, "log.txt"))
